# 22202-gankeev-oop-cpp

./: .gitignore  CMakeLists.txt
task-0/: CSVFileWriter.cpp  CSVFileWriter.h  FileReader.cpp  FileReader.h  Parser.cpp  Parser.h  StatisticStorage.cpp  StatisticStorage.h  main.cpp  output.csv  text.txt
task-0/Google_test/: CMakeLists.txt  FileReaderTest.cpp  ParseStringTest.cpp  StatisticStorageTest.cpp
task-1/: BitArray.cpp  BitArray.h  main.cpp
task-1/Google_test/: CMakeLists.txt  Constructors.cpp  Methods.cpp  Operator_shifts.cpp  Operators.cpp
